--- a/open-metadata-resources/open-metadata-demos/virtual-data-connector/pom.xml
+++ b/open-metadata-resources/open-metadata-demos/virtual-data-connector/pom.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- SPDX-License-Identifier: Apache-2.0 -->
-<!-- Copyright Contributors to the ODPi Egeria project. -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>open-metadata-resources</artifactId>
+        <artifactId>open-metadata-demos</artifactId>
         <groupId>org.odpi.egeria</groupId>
         <version>1.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Open Metadata Demos</name>
+    <name>Virtual Data Connector (VDC) Demo</name>
     <description>
-        Code, resources and scripts to support an open metadata demo.
+        Demonstration of metadata exchange between two open metadata repositories and the use of this
+        metadata to configure a data virtualization platform with views and a security tool to provide
+        metadata driven access control for the data virtualization platform.
     </description>
 
-    <artifactId>open-metadata-demos</artifactId>
+    <artifactId>virtual-data-connector</artifactId>
+
     <packaging>pom</packaging>
     <modules>
-        <module>virtual-data-connector</module>
-        <module>in-memory-repository-demo</module>
+        <module>igc-repository-proxy</module>
+        <module>virtualizer</module>
     </modules>
-
 
 </project>
